# MarketAgent

./: README.md  analysis.md  analysis_jio.md  pyproject.toml  report.md  test.py
servers/: mcpserver.py  new.py  newmcpserver.py
src/custommcp/: crew.py  main.py
